@@ -10,8 +10,7 @@ Remove deprecated Sample,SampleImplementation::operator*(SquareMatrix) and opera
 Remove deprecated SampleImplementation::scale(SquareMatrix) in 1.12
 Remove deprecated Domain(a, b) constructor in 1.12
 Remove deprecated Domain,DomainImplementation::numericallyContains, isEmpty, isNumericallyEmpty, getVolume, getNumericalVolume, computeVolume in 1.12
-Remove deprecated DomainImplementation::volumeOld_, isAlreadyComputedVolumeOld_ members in 1.12
-Change Interval,Mesh::computeVolume to return void in 1.12
+Remove deprecated Interval,Mesh::computeVolume in 1.12
 Remove deprecated Domain,DomainImplementation::getLowerBound, getUpperBound in 1.12
 Remove deprecated SobolIndicesAlgorithm::[sg]etBootstrapConfidenceLevel in 1.12
 Remove deprecated Mesh::getVerticesToSimplicesMap,computeSimplexVolume in 1.12
