@@ -66,6 +66,7 @@
  * Removed all KDTree services from Mesh,RegularGrid,Field::getNearestVertex, getNearestVertexIndex, etc, client code must use NearestNeighbourAlgorithm if needed
  * Changed Mesh to not derive from DomainImplementation
  * Deprecated Mesh::computeSimplexVolume, use Mesh::computeSimplicesVolume instead
+ * Deprecated Mesh,Interval::computeVolume
 
 === Python module ===
 
